# affine

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.txt  CHANGES.txt  MANIFEST.in  README.md  README.rst  affine.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
affine/: __init__.py
affine/tests/: test_numpy.py  test_pickle.py  test_rotation.py  test_transform.py
debian/: changelog  control  copyright
docs/: requirements.txt
docs/src/: conf.py  index.rst
src/: affine.py
src/affine/: __init__.py
src/affine/tests/: test_transform.py
tests/: test_numpy.py  test_pickle.py  test_rotation.py  test_transform.py
