[metadata]
name = affine
version = attr: affine.__init__.__version__
description = Matrices describing affine transformation of the plane
long_description = file: README.rst
author = Sean Gillies
author_email = sean@mapbox.com
license = BSD
license_files = LICENSE.txt
keywords = affine, transformation, matrix
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Scientific/Engineering :: GIS
url = https://github.com/rasterio/affine
download_url = https://pypi.org/project/affine/
project_urls =
    Bug Tracker = https://github.com/rasterio/affine/issues
    Source Code = https://github.com/rasterio/affine

[options]
include_package_data = True
zip_safe = True
packages = find:

[options.extras_require]
test =
    pytest>=4.6
    pytest-cov
    pydocstyle
    flake8
    coveralls

[bdist_wheel]
universal: 1

[tool:pytest]
testpaths: affine/tests

[pydocstyle]
select: D1
add-ignore: D105
